--- a/content/lab-2/lab2.ipynb
+++ b/content/lab-2/lab2.ipynb
@@ -1331,7 +1331,7 @@
    "outputs": [],
    "source": [
     "from qiskit.tools.jupyter import *\n",
-    "%qiskit_version_table"
+    "%qiskit_version_table\n"
    ]
   }
  ],
