Update a comment in ex 3

--- a/content/lab-1/lab1.ipynb
+++ b/content/lab-1/lab1.ipynb
@@ -1288,7 +1288,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Make a random list for theta between 0 and 1\n",
+    "# Make a list of evenly spaced values for theta between 0 and 1\n",
     "\n",
     "theta1 = # build your code here\n",
     "theta2 = # build your code here\n",
