--- a/content/lab-1/lab1-es.ipynb
+++ b/content/lab-1/lab1-es.ipynb
@@ -1285,7 +1285,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Make a random list for theta between 0 and 1\n",
+    "# Make a list of evenly spaced values for theta between 0 and 1\n",
     "\n",
     "theta1 = # build your code here\n",
     "theta2 = # build your code here\n",
@@ -2225,7 +2225,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2239,7 +2239,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
   },
   "vscode": {
    "interpreter": {
