--- a/content/lab-1/lab1-ko.ipynb
+++ b/content/lab-1/lab1-ko.ipynb
@@ -1305,7 +1305,7 @@
     "\n",
     "with Session(service=service, backend=backend):\n",
     "    \n",
-    "    options = Options(simulator={\"seed_simulator\": 42}) # Do not change values in simulator\n",
+    "    options = Options(simulator={\"seed_simulator\": 42}, resilience_level=0) # Do not change values in simulator\n",
     "    \n",
     "    estimator = # build your code here\n",
     "    \n",
@@ -2222,7 +2222,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2236,7 +2236,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
   },
   "vscode": {
    "interpreter": {
