Update imports lab1
Update imports lab1

--- a/content/lab-1/lab1.ipynb
+++ b/content/lab-1/lab1.ipynb
@@ -1693,7 +1693,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from qiskit.providers.ibmq import least_busy\n",
+    "from qiskit_ibm_provider import least_busy\n",
     "backend = least_busy(provider.backends(filters=lambda x: not x.configuration().simulator))"
    ]
   },
@@ -2234,7 +2234,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.6"
   },
   "vscode": {
    "interpreter": {
