Update addtional translations to Spanish notebooks

--- a/content/lab-2/lab2-es.ipynb
+++ b/content/lab-2/lab2-es.ipynb
@@ -557,7 +557,7 @@
     "<div class=\"alert alert-block alert-success\">\n",
     "<b>Ejercicio 2:</b> \n",
     "    \n",
-    "Responde sí (yes) o no (no), si las siguientes afirmaciones que describen la **Mitigación de Mediciones sin Matriz (Matrix-free Measurement Mitigation, M3)** son correctas.\n",
+    "Responde *yes* o *no*, si las siguientes afirmaciones que describen la **Mitigación de Mediciones sin Matriz (Matrix-free Measurement Mitigation, M3)** son correctas.\n",
     "- Q1: M3 es una técnica de mitigación de errores de compuerta cuántica y se utiliza para computadoras cuánticas tolerantes a fallas.\n",
     "\n",
     "- Q2: M3 funciona en el subespacio que se crea al reducir la sobrecarga exponencial a una escala que depende de la cantidad de cadenas de bits aleatorias.\n",
@@ -692,7 +692,7 @@
     "\n",
     "El módulo de proveedores falsos contiene proveedores de este tipo y clases de backends falsos. Los backends falsos están diseñados para imitar los comportamientos de los sistemas IBM Quantum utilizando copias del sistema. Las copias del sistema contienen información importante sobre el sistema cuántico, como el mapa de acoplamiento, las compuertas base, las propiedades de los qubits (T1, T2, tasa de error, etc.) que son útiles para realizar una simulación ruidosa del sistema.\n",
     "\n",
-    "En este caso, importaremos `FakeManila` para hacer el modelo de ruido. Con el modelo, configuramos varios datos que son el modelo de ruido, las compuertas base, el mapa de acoplamiento y la semilla, en la opción `simulator` dentro de `Options`."
+    "En este caso, importaremos `FakeManila` para hacer el modelo de ruido. Con el modelo, podemos configurar varios datos que son el modelo de ruido, las compuertas base, el mapa de acoplamiento y la semilla, en la opción `simulator` dentro de `Options`."
    ]
   },
   {
@@ -889,7 +889,7 @@
     "<div class=\"alert alert-block alert-success\">\n",
     "<b>Ejercicio 3:</b> \n",
     "\n",
-    "Crea los códigos del **sampler** para encontrar la **fidelidad de la muestra** bajo las siguientes condiciones.\n",
+    "Crea los códigos del **sampler** para encontrar la **fidelidad de estado** bajo las siguientes condiciones.\n",
     "Cuando se usa una computadora cuántica real, es necesario pensar en cómo lidiar con el ruido. El número de iteraciones debe fijarse en `shots = 10000`.\n",
     "    \n",
     "- Simulador ideal\n",
@@ -1066,7 +1066,7 @@
     "<div class=\"alert alert-block alert-success\">\n",
     "<b>Ejercicio 4:</b> \n",
     "\n",
-    "Ahora, puedes construir el código del **Kernel Cuántico** usando `circuit_num` y `data_append` utilizando el **Sampler**. Para los datos de entrenamiento, usa `sample_train` que creaste en el capítulo anterior, \"Cadenas de bits manuscritas\". Debes usar el simulador ruidoso `FakeManila` con la mitigación de errores, `resilience_level=1`.\n",
+    "Construye el código del **Kernel Cuántico** usando `circuit_num` y `data_append` con el **Sampler**. Para los datos de entrenamiento, usa `sample_train` que creaste en el capítulo anterior, \"Cadenas de bits manuscritas\". Debes usar el simulador ruidoso `FakeManila` con la mitigación de errores, `resilience_level=1`.\n",
     "\n",
     "**Nota**: No cambies la semilla del simulador en Options:`\"seed_simulator\": 1234`. El número de iteraciones debe fijarse en `shots = 10000`.\n",
     "\n",
@@ -1158,7 +1158,7 @@
    "id": "ffe6bbae",
    "metadata": {},
    "source": [
-    "Usando etiquetas para datos de entrenamiento, verifiquemos la precisión del entrenamiento."
+    "Usando las etiquetas del conjunto de entrenamiento, verifiquemos la precisión del entrenamiento."
    ]
   },
   {
@@ -1411,9 +1411,9 @@
     "\n",
     "<b>Asesor:</b> Anna Phan\n",
     "\n",
-    "<b>Creative assets by:</b> Radha Pyari Sandhir\n",
+    "<b>Recursos creativos por:</b> Radha Pyari Sandhir\n",
     "\n",
-    "<b>Translated and adapted by:</b> Claudia Zendejas-Morales\n",
+    "<b>Traducido por:</b> Claudia Zendejas-Morales y Alberto Maldonado Romo\n",
     "\n",
     "Version: 1.0"
    ]
@@ -1432,7 +1432,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1446,7 +1446,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.4"
   },
   "vscode": {
    "interpreter": {
