update import statement for lab1-es

--- a/content/lab-1/lab1-es.ipynb
+++ b/content/lab-1/lab1-es.ipynb
@@ -1689,7 +1689,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from qiskit.providers.ibmq import least_busy\n",
+    "from qiskit_ibm_provider import least_busy\n",
     "backend = least_busy(provider.backends(filters=lambda x: not x.configuration().simulator))"
    ]
   },
@@ -1761,7 +1761,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from qiskit.providers.ibmq import least_busy\n",
+    "from qiskit_ibm_provider import least_busy\n",
     "backend = least_busy(provider.backends(filters=lambda x: not x.configuration().simulator))"
    ]
   },
