--- a/content/lab-1/lab1-ja.ipynb
+++ b/content/lab-1/lab1-ja.ipynb
@@ -120,7 +120,7 @@
     "\n",
     "しかし、量子計算の観点からその意味を考える前に、「Primitive(プリミティブ)」という言葉が実際に何を意味するのか、それが私たちに何を意味するのかを考えてみよう。\n",
     "\n",
-    "**生物学者**に「原始的要素とは何か」と尋ねると、おそらく次のような答えが返ってくるでしょう：「共通の祖先から受け継いだ性質、特性、特徴」。**数学者**であれば、「有限体において、その場の乗法的要素群の生成元となる要素」と答えるかもしれません。**CADモデルの設計者**なら、「複雑な幾何学的形状を構築するために使用できる、システム上で最も単純な形状」と説明するかもしれません。"
+    "**生物学者**に「原始的要素とは何か」と尋ねると、おそらく次のような答えが返ってくるでしょう：「共通の祖先から受け継いだ性質、特性、特徴」。**数学者**であれば、「有限体において、その体の乗法的要素群の生成元となる要素」と答えるかもしれません。**CADモデルの設計者**なら、「複雑な幾何学的形状を構築するために使用できる、システム上で最も単純な形状」と説明するかもしれません。"
    ]
   },
   {
