--- a/content/lab-2/lab2-ja.ipynb
+++ b/content/lab-2/lab2-ja.ipynb
@@ -890,7 +890,7 @@
     "- 誤差を緩和しない`FakeManila`シミュレーター\n",
     "- 誤差を緩和した`FakeManila`シミュレーター\n",
     "\n",
-    "誤差緩和には、先程と同じように、`resilience_level_level=1`を使用して、M3緩和を使います。\n",
+    "誤差緩和には、先程と同じように、`resilience_level=1`を使用して、M3緩和を使います。\n",
     "</div>"
    ]
   },
@@ -1064,7 +1064,7 @@
     "<div class=\"alert alert-block alert-success\">\n",
     "<b>Exercise 4:</b> \n",
     "    \n",
-    "`circuit_num`と`data_append`を使用して **Sampler** を使って、**量子カーネル** を計算してください。学習データとして、前の章「手書きのビット文字列」で作成した `sample_train` を使用してください。また、エラー軽減 `resilience_level_level=1`を使ってnoisy simulator`FakeManila`で実行してください。\n",
+    "`circuit_num`と`data_append`を使用して **Sampler** を使って、**量子カーネル** を計算してください。学習データとして、前の章「手書きのビット文字列」で作成した `sample_train` を使用してください。また、エラー軽減 `resilience_level=1`を使ってnoisy simulator`FakeManila`で実行してください。\n",
     "    \n",
     "**注意** : Optionにあるシミュレーターのシードを変更しないでください:`\"seed_simulator\": 1234`　ショット数は `shots = 10000` に固定してください。    \n",
     "    \n",
@@ -1158,7 +1158,7 @@
    "id": "3d92f274",
    "metadata": {},
    "source": [
-    "学習用のラベルを確認して、学習率を確認してみましょう。"
+    "学習用のラベルを確認して、正答率を確認してみましょう。"
    ]
   },
   {
@@ -1206,7 +1206,7 @@
     "<b>Exercise 5:</b> \n",
     "    \n",
     "あなたの量子分類器で **未知のビット列`unknown_data`を解読** してください。<br>\n",
-    "正方行列ではないカーネルに対応するために、データを量子カーネル回路にエンコードする`circuit_num`と関数 `data_append`を変更する必要があります。エラー緩和 `resilience_level_level=1`を使ってノイズありシミュレーター`FakeManila` で実行してください。以下の二つの結果を提出します。\n",
+    "正方行列ではないカーネルに対応するために、データを量子カーネル回路にエンコードする`circuit_num`と関数 `data_append`を変更する必要があります。エラー緩和 `resilience_level=1`を使ってノイズありシミュレーター`FakeManila` で実行してください。以下の二つの結果を提出します。\n",
     "- 未知のビット列の解読結果：`ex5_predict`\n",
     "- `unknown_data`と`sample_train`で計算されたカーネル行列：`kernel_ex5`\n",
     "\n",
