--- a/content/lab-2/lab2-ko.ipynb
+++ b/content/lab-2/lab2-ko.ipynb
@@ -289,7 +289,7 @@
    "id": "43a91b44",
    "metadata": {},
    "source": [
-    "클래스당 180개의 샘플이 있습니다. 각 데이터 포인트는 8x8 사이즈 숫자의 이미지이며, 배열로 표현됩니다. 여기서 각 요소는 0(흰색)과 16(검은색) 사이의 정수입니다. 양자 분류에 데이터셋을 사용하려면 범위를 -1과 1 사이로 축소하고 차원성을 사용할 큐비트 수를 (여기서는 n_dim=8)로 줄여야 합니다."
+    "클래스당 180개의 샘플이 있습니다. 각 데이터 포인트는 8x8 사이즈 숫자의 이미지이며, 배열로 표현됩니다. 여기서 각 요소는 0(흰색)과 16(검은색) 사이의 정수입니다. 양자 분류에 데이터셋을 사용하려면 범위를 -1과 1 사이로 축소하고 차원성을 사용할 매개변수 수를 (여기서는 n_dim=8)로 줄여야 합니다."
    ]
   },
   {
@@ -1456,7 +1456,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.8.13"
   },
   "vscode": {
    "interpreter": {
