--- a/content/lab-2/lab2.ipynb
+++ b/content/lab-2/lab2.ipynb
@@ -270,7 +270,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There are ~180 samples per class. Each datapoint is an 8x8 image of a digit, collapsed into an array, where each element is an integer between 0 (white) and 16 (black). To use the dataset for quantum classification, we need to scale the range to between -1 and 1, and reduce the dimensionality to the number of qubits we want to use (here n_dim=8)."
+    "There are ~180 samples per class. Each datapoint is an 8x8 image of a digit, collapsed into an array, where each element is an integer between 0 (white) and 16 (black). To use the dataset for quantum classification, we need to scale the range to between -1 and 1, and reduce the dimensionality to the number of parameters we want to use (here n_dim=8)."
    ]
   },
   {
@@ -1351,7 +1351,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.13"
   },
   "vscode": {
    "interpreter": {
