--- a/content/lab-2/lab2-es.ipynb
+++ b/content/lab-2/lab2-es.ipynb
@@ -288,7 +288,7 @@
    "id": "43a91b44",
    "metadata": {},
    "source": [
-    "Hay ~180 muestras por clase. Cada punto de datos es una imagen de 8x8 de un dígito, colapsada en un arreglo, donde cada elemento es un número entero entre 0 (blanco) y 16 (negro). Para usar el conjunto de datos para la clasificación cuántica, necesitamos escalar el rango entre -1 y 1, y reducir la dimensionalidad al número de qubits que queremos usar (aquí n_dim=8)."
+    "Hay ~180 muestras por clase. Cada punto de datos es una imagen de 8x8 de un dígito, colapsada en un arreglo, donde cada elemento es un número entero entre 0 (blanco) y 16 (negro). Para usar el conjunto de datos para la clasificación cuántica, necesitamos escalar el rango entre -1 y 1, y reducir la dimensionalidad al número de parámetros que queremos usar (aquí n_dim=8)."
    ]
   },
   {
@@ -1446,7 +1446,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.12"
   },
   "vscode": {
    "interpreter": {
