--- a/content/lab-2/lab2-ja.ipynb
+++ b/content/lab-2/lab2-ja.ipynb
@@ -278,7 +278,7 @@
    "id": "4b991db3",
    "metadata": {},
    "source": [
-    "1クラスあたり〜180のサンプルがあります。各データポイントは8x8の数字画像で、各要素は0（白）から16（黒）の間の整数である配列に畳まれています。このデータセットを量子分類に利用するためには、データ範囲を-1〜1の間でスケーリングし、次元を利用する量子ビットの数（ここではn_dim=8）に減らす必要があります。"
+    "1クラスあたり〜180のサンプルがあります。各データポイントは8x8の数字画像で、各要素は0（白）から16（黒）の間の整数である配列に畳まれています。このデータセットを量子分類に利用するためには、データ範囲を-1〜1の間でスケーリングし、次元を利用するパラメータの数（ここではn_dim=8）に減らす必要があります。"
    ]
   },
   {
@@ -1433,7 +1433,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1447,7 +1447,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
   },
   "vscode": {
    "interpreter": {
