misc update of lab2-ja

--- a/content/lab-2/lab2-ja.ipynb
+++ b/content/lab-2/lab2-ja.ipynb
@@ -278,7 +278,7 @@
    "id": "4b991db3",
    "metadata": {},
    "source": [
-    "1クラスあたり〜180のサンプルがあります。各データポイントは8x8の数字画像で、各要素は0（白）から16（黒）の間の整数である配列に畳まれています。このデータセットを量子分類に利用するためには、データ範囲を-1〜1の間でスケーリングし、次元を利用するパラメータの数（ここではn_dim=8）に減らす必要があります。"
+    "1クラスあたり〜180のサンプルがあります。各データポイントは8x8の数字画像で、各要素は0（白）から16（黒）の間の整数である配列に畳まれています。このデータセットを量子分類に利用するためには、データ範囲を-1〜1の間でスケーリングし、次元を利用するパラメーターの数（ここではn_dim=8）に減らす必要があります。"
    ]
   },
   {
@@ -1064,7 +1064,7 @@
     "<div class=\"alert alert-block alert-success\">\n",
     "<b>Exercise 4:</b> \n",
     "    \n",
-    "`circuit_num`と`data_append`を使用して **Sampler** を使って、**量子カーネル** を計算してください。学習データとして、前の章「手書きのビット文字列」で作成した `sample_train` を使用してください。また、エラー軽減 `resilience_level=1`を使ってnoisy simulator`FakeManila`で実行してください。\n",
+    "`circuit_num`と`data_append`を使用して **Sampler** を使って、**量子カーネル** を計算してください。学習データとして、前の章「手書きのビット文字列」で作成した `sample_train` を使用してください。また、エラー緩和 `resilience_level=1`を使ってノイズありシミュレーター`FakeManila`で実行してください。\n",
     "    \n",
     "**注意** : Optionにあるシミュレーターのシードを変更しないでください:`\"seed_simulator\": 1234`　ショット数は `shots = 10000` に固定してください。    \n",
     "    \n",
